@@ -13,5 +13,6 @@
 # Settings to access the Internet behind a proxy
 #-Dhttp.proxyHost=192.168.1.1
 #-Dhttp.proxyPort=3128
-
+# Google Translate v2 API key
+#-Dgoogle.api.key=xxxxx
 
