@@ -126,6 +126,7 @@ public class Preferences {
     public static final String ALWAYS_CONFIRM_QUIT = "always_confirm_quit";
 
     public static final String ALLOW_GOOGLE_TRANSLATE = "allow_google_translate";
+    public static final String ALLOW_GOOGLE2_TRANSLATE = "allow_google2_translate";
 
     public static final String ALLOW_BELAZAR_TRANSLATE = "allow_belazar_translate";
 
